Fixes collapsed view.

--- a/src/styles/doxray-template.less
+++ b/src/styles/doxray-template.less
@@ -111,7 +111,7 @@ label:
         margin-bottom: @doxray-margin-sm;
     }
 
-    &.is-collapsed .doxray-link {
+    &.is-collapsed .doxray-link:not(.doxray-link__file) {
         display: none;
     }
 }
